==> ArthurVardumyan/psopd500ampli/Psopd/Src/ad7779.c <==
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include "stm32f4xx_hal.h"
#include "defines.h"
#include "ad7779.h"
#include "communication.h"
#include "crc16.h"

int32_t ad7779_spi_int_reg_read(ad7779_dev *dev,
								uint8_t reg_addr,
								uint8_t *reg_data)
{
	uint8_t txbuf[3];
        uint8_t rxbuf[3];
	uint8_t buf_size = 2;
	uint8_t crc;
	int32_t ret;

	txbuf[0] = 0x80 | (reg_addr & 0x7F);
	txbuf[1] = 0x00;
	txbuf[2] = 0x00;
	if (dev->spi_crc_en == AD7779_ENABLE) buf_size = 3;
	ret = HAL_SPI_TransmitReceive(&dev->spi_dev, txbuf, rxbuf, buf_size, SPI_TIMEOUT_1);

	*reg_data = rxbuf[1];
	if (dev->spi_crc_en == AD7779_ENABLE) {
		rxbuf[0] = 0x80 | (reg_addr & 0x7F);
		crc = ad7779_compute_crc8(&rxbuf[0], 2);
		if (crc != rxbuf[2]) {
			printf("%s: CRC Error.\n", __func__);
			ret = HAL_ERROR;
		}
	}

	return ret;
}

int32_t ad7779_spi_int_reg_write(ad7779_dev *dev,
								 uint8_t reg_addr,
								 uint8_t reg_data)
{
	uint8_t txbuf[3];
        uint8_t rxbuf[3];
	uint8_t buf_size = 2;
	int32_t ret;

	txbuf[0] = 0x00 | (reg_addr & 0x7F);
	txbuf[1] = reg_data;
	if (dev->spi_crc_en == AD7779_ENABLE) {
		txbuf[2] = ad7779_compute_crc8(&txbuf[0], 2);
		buf_size = 3;
	}
	ret = HAL_SPI_TransmitReceive(&dev->spi_dev, txbuf, rxbuf, buf_size, SPI_TIMEOUT_1);
	dev->cached_reg_val[reg_addr] = reg_data;

	return ret;
}

int32_t ad7779_get_dclk_div(ad7779_dev *dev,
							ad7768_dclk_div *div)
{
	*div = dev->dclk_div;

	return HAL_OK;
}

int32_t ad7779_get_sync_offset(ad7779_dev *dev,
							   ad7779_ch ch,
							   uint8_t *sync_offset)
{
	if (dev->ctrl_mode == AD7779_PIN_CTRL) {
		printf("%s: This feature is not available in PIN control mode.\n",
			   __func__);
		return HAL_ERROR;
	}

	*sync_offset = dev->sync_offset[ch];

	return HAL_OK;
}

int32_t ad7779_get_offset_corr(ad7779_dev *dev,
							   ad7779_ch ch,
							   uint32_t *offset)
{
	if (dev->ctrl_mode == AD7779_PIN_CTRL) {
		printf("%s: This feature is not available in PIN control mode.\n",
			   __func__);
		return HAL_ERROR;
	}

	*offset = dev->offset_corr[ch];

	return HAL_OK;
}

int32_t ad7779_get_gain_corr(ad7779_dev *dev,
							 ad7779_ch ch,
							 uint32_t *gain)
{
	if (dev->ctrl_mode == AD7779_PIN_CTRL) {
		printf("%s: This feature is not available in PIN control mode.\n",
			   __func__);
		return HAL_ERROR;
	}

	*gain = dev->gain_corr[ch];

	return HAL_OK;
}

int32_t ad7779_get_ref_buf_op_mode(ad7779_dev *dev,
								   ad7779_refx_pin refx_pin,
								   ad7779_ref_buf_op_mode *mode)
{
	if (dev->ctrl_mode == AD7779_PIN_CTRL) {
		printf("%s: This feature is not available in PIN control mode.\n",
			   __func__);
		return HAL_ERROR;
	}

	*mode = dev->ref_buf_op_mode[refx_pin];

	return HAL_OK;
}

int32_t ad7779_do_spi_soft_reset(ad7779_dev *dev)
{
	uint8_t buf[8] = {0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF};
	int32_t ret;

	/* Keeping the SDI pin high during 64 consecutives clocks generates a
	   software reset */
        ret = HAL_SPI_Transmit(&dev->spi_dev, buf, 8, SPI_TIMEOUT_1);
        

	return ret;
}
