==> Bamalam69/BCI-PPCB-Firmware/lib/AD7779/ad7779.cpp <==
#include <stdio.h>
#include <stdlib.h>
#include <Arduino.h>
#include <ad7779.h>
#include <no_os_util.h>
#include <no_os_error.h>
#include <no_os_alloc.h>
#include <no_os_delay.h>

int32_t ad7779_spi_int_reg_read(ad7779_dev *dev,
								uint8_t reg_addr,
								uint8_t *reg_data)
{
	uint8_t buf[3];
	uint8_t buf_size = 2;
	uint8_t crc;
	int32_t ret;

	buf[0] = 0x80 | (reg_addr & 0x7F);
	buf[1] = 0x00;
	buf[2] = 0x00;
	// Serial.println("Reading...");

	if (dev->spi_crc_en == AD7779_ENABLE)
		buf_size = 3;
	ret = no_os_spi_write_and_read(dev->spi_desc, buf, buf_size);

	*reg_data = buf[1];
	if (dev->spi_crc_en == AD7779_ENABLE)
	{
		buf[0] = 0x80 | (reg_addr & 0x7F);
		crc = ad7779_compute_crc8(&buf[0], 2);
		if (crc != buf[2])
		{
			Serial.print(__func__);
			Serial.println(": CRC Error.");
			ret = -1;
		}
	}

#ifdef SPI_DEBUG &&DEBUG
	Serial.print("Read:     ");
	Serial.print(reg_addr, HEX);
	Serial.print(", ");
	Serial.print(buf[1], BIN);
	Serial.println();
#endif

	return ret;
}

int32_t ad7779_spi_int_reg_write(ad7779_dev *dev,
								 uint8_t reg_addr,
								 uint8_t reg_data)
{
	uint8_t buf[3];
	uint8_t buf_size = 2;
	int32_t ret;

	buf[0] = 0x00 | (reg_addr & 0x7F);
	buf[1] = reg_data;
	// Serial.println("Writing...");
	if (dev->spi_crc_en == AD7779_ENABLE)
	{
		buf[2] = ad7779_compute_crc8(&buf[0], 2);
		buf_size = 3;
	}
	ret = no_os_spi_write_and_read(dev->spi_desc, buf, buf_size);
	dev->cached_reg_val[reg_addr] = reg_data;

#ifdef SPI_DEBUG &&DEBUG
	Serial.print("Write:     ");
	Serial.print(reg_addr, HEX);
	Serial.print(", ");
	Serial.print(reg_data, BIN);
	Serial.println();
#endif

	return ret;
}

int32_t ad7779_get_dclk_div(ad7779_dev *dev,
							ad7779_dclk_div *div)
{
	int32_t ret;
	uint8_t reg_data;

	if (!dev->read_from_cache)
	{
		ret = ad7779_spi_int_reg_read(dev, AD7779_REG_DOUT_FORMAT, &reg_data);
		if (ret)
			return ret;
		*div = (ad7779_dclk_div)no_os_field_get(AD7779_DCLK_CLK_DIV(0x7), reg_data);
	}
	else
	{
		*div = dev->dclk_div;
	}

	return 0;
}

int32_t ad7779_get_sync_offset(ad7779_dev *dev,
							   ad7779_ch ch,
							   uint8_t *sync_offset)
{
	int32_t ret;
	uint8_t reg_data;

	if (dev->ctrl_mode == AD7779_PIN_CTRL)
	{
		Serial.print(__func__);
		Serial.println(": This feature is not available in PIN control mode.");
		return -1;
	}

	if (!dev->read_from_cache)
	{
		ret = ad7779_spi_int_reg_read(dev, AD7779_REG_CH_SYNC_OFFSET(ch), &reg_data);
		if (ret)
			return ret;
		*sync_offset = reg_data;
	}
	else
	{
		*sync_offset = dev->sync_offset[ch];
	}

	return 0;
}

int32_t ad7779_get_offset_corr(ad7779_dev *dev,
							   ad7779_ch ch,
							   uint32_t *offset)
{
	int32_t ret;
	uint8_t reg_data;

	if (dev->ctrl_mode == AD7779_PIN_CTRL)
	{
		Serial.print(__func__);
		Serial.println(": This feature is not available in PIN control mode.");
		return -1;
	}

	if (!dev->read_from_cache)
	{
		ret = ad7779_spi_int_reg_read(dev, AD7779_REG_CH_OFFSET_LOWER_BYTE(ch),
									  &reg_data);
		if (ret)
			return ret;
		*offset = reg_data;

		ret = ad7779_spi_int_reg_read(dev, AD7779_REG_CH_OFFSET_MID_BYTE(ch),
									  &reg_data);
		if (ret)
			return ret;
		*offset |= reg_data << 8;

		ret = ad7779_spi_int_reg_read(dev, AD7779_REG_CH_OFFSET_UPPER_BYTE(ch),
									  &reg_data);
		if (ret)
			return ret;
		*offset |= reg_data << 16;
	}
	else
	{
		*offset = dev->offset_corr[ch];
	}

	return 0;
}

int32_t ad7779_get_gain_corr(ad7779_dev *dev,
							 ad7779_ch ch,
							 uint32_t *gain)
{
	int32_t ret;
	uint8_t reg_data;

	if (dev->ctrl_mode == AD7779_PIN_CTRL)
	{
		Serial.print(__func__);
		Serial.println(": This feature is not available in PIN control mode.");
		return -1;
	}

	if (!dev->read_from_cache)
	{
		ret = ad7779_spi_int_reg_read(dev, AD7779_REG_CH_GAIN_LOWER_BYTE(ch),
									  &reg_data);
		if (ret)
			return ret;
		*gain = reg_data;

		ret = ad7779_spi_int_reg_read(dev, AD7779_REG_CH_GAIN_MID_BYTE(ch), &reg_data);
		if (ret)
			return ret;
		*gain |= reg_data << 8;

		ret = ad7779_spi_int_reg_read(dev, AD7779_REG_CH_GAIN_UPPER_BYTE(ch),
									  &reg_data);
		if (ret)
			return ret;
		*gain |= reg_data << 16;
	}
	else
	{
		*gain = dev->gain_corr[ch];
	}

	return 0;
}

int32_t ad7779_get_ref_buf_op_mode(ad7779_dev *dev,
								   ad7779_refx_pin refx_pin,
								   ad7779_ref_buf_op_mode *mode)
{
	int32_t ret;
	uint8_t cfg_1;
	uint8_t cfg_2;
	uint8_t reg_data;
	uint8_t cfg_1_mask;
	uint8_t cfg_2_mask;

	if (dev->ctrl_mode == AD7779_PIN_CTRL)
	{
		Serial.print(__func__);
		Serial.println(": This feature is not available in PIN control mode.");
		return -1;
	}

	if (refx_pin == AD7779_REFX_P)
	{
		cfg_1_mask = AD7779_REF_BUF_POS_EN;
		cfg_2_mask = AD7779_REFBUFP_PREQ;
	}
	else
	{
		cfg_1_mask = AD7779_REF_BUF_NEG_EN;
		cfg_2_mask = AD7779_REFBUFN_PREQ;
	}

	if (!dev->read_from_cache)
	{
		ret = ad7779_spi_int_reg_read(dev, AD7779_REG_BUFFER_CONFIG_1, &reg_data);
		if (ret)
			return ret;
		cfg_1 = no_os_field_get(cfg_1_mask, reg_data);

		ret = ad7779_spi_int_reg_read(dev, AD7779_REG_BUFFER_CONFIG_2, &reg_data);
		if (ret)
			return ret;
		cfg_2 = no_os_field_get(cfg_2_mask, reg_data);

		if ((cfg_1 == 1) && (cfg_2 == 0))
			*mode = AD7779_REF_BUF_ENABLED;
		else if ((cfg_1 == 1) && (cfg_2 == 1))
			*mode = AD7779_REF_BUF_PRECHARGED;
		else if (cfg_1 == 0 && cfg_2 == 0)
			*mode = AD7779_REF_BUF_DISABLED;
		else
			return -1;
	}
	else
	{
		*mode = dev->ref_buf_op_mode[refx_pin];
	}

	return 0;
}

int32_t ad7779_do_spi_soft_reset(ad7779_dev *dev)
{
	uint8_t buf[8] = {0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF, 0xFF};
	int32_t ret;

	/* Keeping the SDI pin high during 64 consecutives clocks generates a
	   software reset */
	ret = no_os_spi_write_and_read(dev->spi_desc, buf, 8);

	return ret;
}
